--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "node-roa-time",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "scripts": {},
   "description": "Spain official time provided by 'Real Instituto y Observatorio de la Armada' (ROA)",
   "main": "lib/index.js",
-    "bin": {
-        "roa": "bin/roa.js"
-    },
+  "bin": {
+    "roa": "bin/roa.js"
+  },
   "dependencies": {
-    "moment": "^2.8.3",
-    "ntp-client": "^0.5.2"
+    "locale": "0.0.20",
+    "moment": "2.8.3",
+    "ntp-client": "0.5.2"
   },
   "devDependencies": {},
   "repository": {
