--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "locale": "0.0.20",
     "moment": "2.8.3",
+    "moment-timezone": "0.2.2",
     "ntp-client": "0.5.2"
   },
   "devDependencies": {},
