--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "moment-timezone": "0.2.2",
     "ntp-client": "0.5.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gulp": "^3.8.8",
+    "gulp-bump": "^0.1.11",
+    "gulp-git": "^0.5.1"
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/guumaster/node-roa-time.git"
