--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "devDependencies": {
     "gulp": "^3.8.8",
     "gulp-bump": "^0.1.11",
-    "gulp-git": "^0.5.1"
+    "gulp-git": "^0.5.1",
+    "npm": "^2.0.0"
   },
   "repository": {
     "type": "git",
